2005-04-27 Benoit Grégoire  <bock@step.polymtl.ca>
	* FlickrPhotostream.php:  Fix the object so it doesn't crash when flicker is disabled.
	
2005-04-27 Benoit Grégoire  <bock@step.polymtl.ca>
	* ContentGroup.php:  Fully functionnal content rotation engine, with all options supported.    Rotation based on session may not be reliable if the user isn't truly logged in (from a node). 

2005-04-26 François Proulx <francois.proulx@gmail.com>
	* Most of the missing translations
	
2005-04-26 François Proulx <francois.proulx@gmail.com>
	* Changed back File to non trivial
	* portal page stylesheet
	
2005-04-26 Benoit Grégoire  <bock@step.polymtl.ca>
	* ContentGroupElement.php:  It shouldn't be allowed to create a new content element in isolation.  Unfortunately the UI allows if for now.  Such content will now be deleted.
	* Locale:  Fix string selection algorithm to pick the right language.
	* Content:  Implement display logging.
	
2005-04-26 François Proulx <francois.proulx@gmail.com>
	* stylesheet rework
2005-04-26 François Proulx <francois.proulx@gmail.com>
	* Fixed wrong location for change password link
2005-04-25 François Proulx <francois.proulx@gmail.com>
	* Portal page styling
	
2005-04-26 Benoit Grégoire  <bock@step.polymtl.ca>
	* ContentGroup.php:  Previous fix didn't work.  New fix.

2005-04-26 Benoit Grégoire  <bock@step.polymtl.ca>
	* ContentGroup.php:  Make bad selection mode eror non-fatal.
2005-04-25 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix bug in ContentGroup enumeration

2005-04-25 François Proulx <francois.proulx@gmail.com>
	* More stylesheets work
	
2005-04-25 François Proulx <francois.proulx@gmail.com>
	* Much better stylesheet
		
2005-04-25 Benoit Grégoire  <bock@step.polymtl.ca>
	* UI fully functionnal

2005-04-25 François Proulx <francois.proulx@gmail.com
	* More interface work
2005-04-25 François Proulx <francois.proulx@gmail.com
	* Completed integration of new interface with new objects
	
2005-04-25 Benoit Grégoire  <bock@step.polymtl.ca>